--- a/www/partials/addpatient/plan/drugAdd.html
+++ b/www/partials/addpatient/plan/drugAdd.html
@@ -47,7 +47,7 @@
 	</ion-item>
 	<ion-item> 
 	  	<label class="item item-input">
-	    	<span class="input-label">用药时段</span>
+	    	<span class="input-label">用药时间</span>
 	    	<select ng-model = "task.Time">
 	    		<option value="">请选择</option>
 				<option value="饭前">饭前</option>
