--- a/www/partials/addpatient/plan/exercise.html
+++ b/www/partials/addpatient/plan/exercise.html
@@ -24,7 +24,7 @@
 
 
         <div style="text-align:center;padding:20px;">
-			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="Confirm()">
+			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="Confirm()" ng-if="isloaded">
 			<span style="font-size:15px;color:blue;font-weight:bold">确定</span>
 			</button>
 		</div>
