--- a/www/partials/addpatient/plan/personal.html
+++ b/www/partials/addpatient/plan/personal.html
@@ -9,7 +9,7 @@
 	<ion-content>
 		
 		<div style="text-align:center;padding:20px;">
-        <button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="onClickBackward()"> 
+        <button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="onClickBackward()" ng-if="isloaded"> 
         <span style="font-size:15px;color:blue;font-weight:bold">确定</span>
         </button>
 	</ion-content>
