--- a/www/partials/managepatient/plan/food.html
+++ b/www/partials/managepatient/plan/food.html
@@ -19,7 +19,7 @@
 	    	</div>
 	    </div>
          <div style="text-align:center;padding:20px;">
-			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="Confirm()">
+			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="Confirm()" ng-if="isloaded">
 			<span style="font-size:15px;color:blue;font-weight:bold">确定</span>
 			</button>
 		</div>
