--- a/www/partials/managepatient/plan/taskList.html
+++ b/www/partials/managepatient/plan/taskList.html
@@ -45,11 +45,11 @@
 		</div>
 				
 		<div class="list">
-			<a class="item item-icon-right" ng-repeat="item in TaskList.taskList" href="#/manage/{{item.Type}}">         
-	        {{item.Name}}
-	        <div class="markDisplay{{item.InvalidFlag}}">
-	        	<i class="icon ion-ios-checkmark-empty"></i>
-	        </div>
+			<a class="item item-icon-left item-icon-right" ng-repeat="item in TaskList.taskList" href="#/manage/{{item.Type}}"> 
+			<i class="{{item.Description}}"></i>        
+	        {{item.Name}}	        
+	        <i class="icon ion-ios-checkmark-empty" ng-if = "item.ControlType"></i>
+	        <i ng-if = "!item.ControlType"></i>	        
 	        </a>       
         </div>			
 						
