--- a/www/partials/managepatient/plan/weight.html
+++ b/www/partials/managepatient/plan/weight.html
@@ -11,7 +11,7 @@
         {{item.Name}}
         </ion-checkbox>
 		<div style="text-align:center;padding:20px;">
-        <button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="Confirm()"> 
+        <button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="Confirm()" ng-if="isloaded"> 
         <span style="font-size:15px;color:blue;font-weight:bold">确定</span>
         </button>
 	</ion-content>
