--- a/www/css/style.css
+++ b/www/css/style.css
@@ -111,9 +111,9 @@
 .item-margin{
   padding:2px;
   margin:6px;
-  -moz-box-shadow:1px 2px 2px #999;
-  -webkit-box-shadow:1px 2px 2px #999;
-  box-shadow:1px 2px 2px #999;
+  /*-moz-box-shadow:1px 2px 2px #999;*/
+  /*-webkit-box-shadow:1px 2px 2px #999;*/
+  box-shadow:1px 1.5px 2px #999;
   /*box-shadow: 1px 1px 0px 1px #CCCCCC;*/
 }
 .bar-shadow{
@@ -122,9 +122,9 @@
   z-index:99;
   opacity:0.6;
   display: block;
-  -moz-box-shadow:0px 4px 5px #777;
-  -webkit-box-shadow:0px 4px 5px #777;
-  box-shadow:0px 4px 5px #777;
+  -moz-box-shadow:0px 4px 5px #999;
+  -webkit-box-shadow:0px 4px 5px #999;
+  box-shadow:0px 4px 5px #999;
   width: 100%;height:4px;
   background-color: transparent; 
 }
@@ -134,9 +134,9 @@
   z-index:99;
   opacity:0.6;
   display: block;
-  -moz-box-shadow:0px 3px 4px #777;
-  -webkit-box-shadow:0px 3px 4px #777;
-  box-shadow:0px 3px 4px #777;
+  -moz-box-shadow:0px 3px 4px #888;
+  -webkit-box-shadow:0px 3px 4px #888;
+  box-shadow:0px 3px 4px #888;
   width: 100%;height:3px;
   background-color: transparent; 
 }
