--- a/www/partials/managepatient/plan.html
+++ b/www/partials/managepatient/plan.html
@@ -9,7 +9,7 @@
   <h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}</h3>
 </div>
 <div class="button-bar ">
-  <a class="button"  >依从率图</a>
+  <a class="button" ng-style="mybuttonStyle" >依从率图</a>
   <a class="button"  href="#/Independent/table/tablelist"> 体征表</a> 
   <a class="button"  href="#/Independent/risk" >风险评估</a>
 </div>
@@ -22,13 +22,18 @@
       </select>
     </div>
     <div class="col-33">
+<!--             <div class="buttons">
+        <button ng-model="" ng-click="popover.show($event)">
+        </button>
+      </div>
+ -->
       <select style="width:100%" ng-model="vitalInfo" ng-change="changeVitalInfo(vitalInfo)" ng-options="option.SignName for option in options" class="select-block select-calm" >
       </select>
     </div>
   </div>
 </div>
 <div ng-if=diaplaysm style="text-align:center"><b>暂无数据</b></div>
-<div id='chartdiv3'></div>
+<div  id='chartdiv3' ng-style="suitstyle()"></div>
 <div class="text-center" style="margin:0;font-size:0.8em">单位（血压：mmHg，心率：次/分钟，血糖：nmol/L）</div>
 <div style="text-align:center;background-color:#DDDDDD">    
   <p style="color:#2894FF;font-size:16px" ng-if=before>计划已结束</p>
