--- a/www/partials/managepatient/plan/healthEducation.html
+++ b/www/partials/managepatient/plan/healthEducation.html
@@ -1,16 +1,16 @@
 <ion-view view-title="健康教育">
-<ion-nav-bar class="bar-positive">
-	<ion-nav-buttons side="primary">
-		<button class="button button-icon ion-arrow-left-c" ng-click="Confirm()">
-		</button>
-	</ion-nav-buttons>
-</ion-nav-bar>
-<div class="bar-shadow"></div>
+	<ion-nav-bar class="bar-positive">
+		<ion-nav-buttons side="primary">
+			<button class="button button-icon ion-arrow-left-c" ng-click="Confirm()">
+			</button>
+		</ion-nav-buttons>
+	</ion-nav-bar>
+	<div class="bar-shadow"></div>
 	<ion-content>
 		<div class="list">
 			<a class="item item-icon-right" ng-repeat = "item in  task.list" href="#" ng-click="ShowDetail(item.Code)">         
             {{item.Name}}
-            <div class="markDisplay{{item.InvalidFlag}}">
+            <div class="markDisplay{{item.ControlType}}">
 	        	<i class="icon ion-ios-checkmark-empty"></i>
 	        </div>
         	</a>
