--- a/www/partials/individual/coach-patients-filter.html
+++ b/www/partials/individual/coach-patients-filter.html
@@ -10,45 +10,22 @@
   	</ion-header-bar>
     <div class="bar-shadow"></div>
    	<ion-content scroll='true'>
-   	    <div class="row" style="padding:0;min-height:200px;box-shadow:1px 1.5px 2px #AAA;">
-   			<div class="col-25 text-center" >
-   				<div class="list"  >
-   				<!-- <ion-item style="padding:0"  ng-repeat="prop in props track by $index" ng-click="switchTo($index)" > -->
-   					<!-- <button style="margin:0" class="button  button-full button-clear button-dark">{{prop}}</button> -->
-   				<!-- </ion-item>  -->
+   	    <div class="row" style="padding:0;min-height:200px;box-shadow:1px 1.5px 2px #AAA">
+   			<div class="col-25">
+   				<div class="list">
             <a class="item" style="background-color:#F6F6F6;z-index:100;padding-top:12px;padding-bottom:0px" ng-repeat="prop in props track by $index" ng-click="switchTo($index)">
-              <center style="padding-bottom:12px">{{prop}}</center>
-              <!-- <i  style="font-size:1.7em;color:#387EF5" class="icon ion-android-done"></i> -->
+              <div style="padding-bottom:12px">{{prop.Name}}<i ng-show="prop.checked" style="font-size:0.02em !important;color:#689f38" class="icon ion-android-checkbox-outline"></i> </div>
             </a>            
    				</div>			
    			</div>
    			<div class="col-75 text-center">
    				<div class="list">
-
-   		<!-- 		<ion-item  style="padding:0;margin-left:1px" ng-click="checkit($index)"ng-repeat="category in categories track by $index">
-
-   				<div class="col-90">
-	   					<button style="margin:0" class="button button-full button-clear button-dark">{{category.Name}}</button>
-   				</div>
-   				<div ng-show="category.checked" class="col-10 "   style="padding-top:12px">
-   					<i  style="font-size:1.7em;color:#387EF5" class="icon ion-android-done"></i>
-   				</div>
-	   			</ion-item> -->
-          <!-- <ion-item  style="padding:0;margin-left:1px" ng-click="checkit($index)" ng-repeat="category in categories track by $index"> -->
             <a style="border-left:0px !important;border-top:0px;border-bottom:0px;padding-bottom:0px;padding-top:0px" class="item item-icon-right" ng-click="checkit($index)" ng-repeat="category in categories track by $index">
               <center style="padding-bottom:12px;padding-top:12px;border-bottom:#DDDDDD 1px solid;border-top:#DDDDDD 1px solid">{{category.Name}}</center>
               <i  ng-show="category.checked"  style="font-size:1.7em;color:#387EF5" class="icon ion-android-done"></i>
             </a>
-          <!-- </ion-item> -->
 	   			</div>
    			</div>
    		</div>
-<!--    		  <ion-list show-reorder="true">
-    <ion-item  ng-repeat='rankprop in rankprops track by $index'class="item-icon-right item-text-wrap" >
-      <h2>{{rankprop.Name}}</h2>
-      <ion-reorder-button class="ion-navicon" on-reorder="moveItem(rankprop, $fromIndex, $toIndex)">
-      </ion-reorder-button>
-    </ion-item>
-  </ion-list> -->
 </ion-content>
 </ion-modal-view>
