--- a/www/partials/individual/coach-patients.html
+++ b/www/partials/individual/coach-patients.html
@@ -55,6 +55,9 @@
       <i class="icon ion-android-close placeholder-icon" ng-hide="clearIt" ng-click="clearSearch()"></i>
     </div>
   </div>  
+  <div ng-click="scrollTop()" ng-touch="fade" ng-hide="needtoTop" class="text-center" style="position: absolute;bottom:60px;right:15px;z-index:100;display:block;width:46px;height:46px;background-color:#11C1F3;border-radius:23px;box-shadow:0px 2px 3px #888;">
+    <i style="font-size:3.2em;color:#FFF" class="icon ion-android-arrow-up"></i>
+  </div>
   <div class="sub-bar-shadow"></div>
   <ion-content class="has-subheader content-item-list" >   
   
