--- a/www/partials/addpatient/DiagnosisInfo.html
+++ b/www/partials/addpatient/DiagnosisInfo.html
@@ -11,13 +11,13 @@
       <ion-item  ng-if=show>
     <h2>无诊断数据</h2>
   </ion-item>
-    <ion-item ng-repeat='item in Diagnosisinfo' >
-
-
-  <h2 style="white-space:pre-wrap">时间:{{item.RecordDate}}</h2>
-      <h2 style="white-space:pre-wrap">{{item.DiagnosisTypeName}}:{{item.DiagnosisName}}</h2>
-
-    
+    <ion-item ng-repeat='item in Diagnosisinfo track by $index' >
+      <h2 style="white-space:pre-wrap">
+        时间:{{item.RecordDate}}
+      </h2>
+      <h2 style="white-space:{{DiagnosisNamestyle[$index]}}" ng-click="showallDiagnosisName($index)">
+        {{item.DiagnosisTypeName}}:{{item.DiagnosisName}}
+      </h2>
     </ion-item>
 
 
