--- a/www/partials/addpatient/druginfo.html
+++ b/www/partials/addpatient/druginfo.html
@@ -1,40 +1,42 @@
 <ion-modal-view>
 <ion-header-bar align-title="middle" class="bar-positive">
-  <div class="buttons">
-    <button class="button" ng-click="closedrugModal()">返回</button>
-  </div>
-  <h1 class="title">用药信息</h1>
-  
+<div class="buttons">
+	<button class="button" ng-click="closedrugModal()">返回</button>
+</div>
+<h1 class="title">用药信息</h1>
+
 </ion-header-bar>
-   <ion-content scroll='true'>
+<ion-content scroll='true'>
 <ion-list >
-	<ion-item  ng-if=show>
-		<h2>无用药数据</h2>
-	</ion-item>
-<ion-item ng-repeat='item in DrugRecordinfo' >
-<h2 class="col-100" style="white-space:pre-wrap">开始时间：{{item.StartDateTime}}</h2>
-
-<h2 class="col-100" style="white-space:pre-wrap">结束时间：{{item.StopDateTime}} </h2>
-<h2 class="col-100" style="white-space:pre-wrap">医嘱类型：{{item.RepeatIndicator}}</h2>
-
-
-<h2 class="col-100" style="white-space:pre-wrap">医嘱名称：{{item.OrderContent}} </h2>
-
-
-
-
-<h2 class="col-100" style="white-space:pre-wrap">剂量：{{item.Dosage}}{{item.DosageUnits}}</h2>
-
-<h2 class="col-100" style="white-space:pre-wrap">给药途径：{{item.Administration}} </h2>
-
-
-
-<h2 class="col-100" style="white-space:pre-wrap">给药频率：{{item.Frequency}} </h2>
-
+<ion-item  ng-if=show>
+<h2>无用药数据</h2>
+</ion-item>
+<ion-item ng-repeat='item in DrugRecordinfo track by $index' >
+	<h2  style="white-space:pre-wrap">
+		开始时间：{{item.StartDateTime}}
+	</h2>
+	<h2  style="white-space:pre-wrap">
+		结束时间：{{item.StopDateTime}} 
+	</h2>
+	<h2  style="white-space:pre-wrap">
+		医嘱类型：{{item.RepeatIndicator}}
+	</h2>
+	<h2  style="white-space:{{OrderContentstyle[$index]}}" ng-click="showallOrderContent($index)">
+		医嘱名称：{{item.OrderContent}} 
+	</h2>
+	<h2  style="white-space:pre-wrap">
+		剂量：{{item.Dosage}}{{item.DosageUnits}}
+	</h2>
+	<h2  style="white-space:pre-wrap">
+		给药途径：{{item.Administration}} 
+	</h2>
+	<h2  style="white-space:pre-wrap">
+		给药频率：{{item.Frequency}} 
+	</h2>
 </ion-item>
 
 
 </ion-list>
 </ion-content>
-  </ion-modal-view>
+</ion-modal-view>
 
