--- a/www/partials/managepatient/plan.html
+++ b/www/partials/managepatient/plan.html
@@ -4,7 +4,7 @@
 <button class="button icon button-icon ion-android-home" ng-click="backtocoach()"></button>
 </ion-nav-buttons>
 </ion-nav-bar>
-<ion-content has-bouncing="false"  class="content-item-list">
+<ion-content has-bouncing="false"  class="content-item-list" scroll="false">
 <div style="padding:0 0 0 12px;background-color:#387ef5;margin:0;text-color:#FFFFFF"> 
   <h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}</h3>
 </div>
