--- a/www/partials/addpatient/riskdetail.html
+++ b/www/partials/addpatient/riskdetail.html
@@ -7,7 +7,7 @@
     <button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()"></button>
   </ion-nav-buttons> -->
 </ion-nav-bar>
-  <div class="bar-shadow"></div> 
+  <!-- <div class="bar-shadow"></div>  -->
 <ion-content>
 <!-- <ion-slide-box on-slide-changed="slideHasChanged($index)">
   <ion-slide>
@@ -30,59 +30,83 @@
  -->
 
 
-<div class="card" ng-show = "!dbtshow">
-  <div class="item item-text-wrap">
-    <div id="chartdiv"></div>
-  </div>
+<!-- <div class="card"> -->
+  <!-- <div class="item item-text-wrap"> -->
+    
+    <!-- <div id="chartdiv"></div>                                -->
+  <!-- </div> -->
+<!-- </div> -->
+
+<div class="card">
+  <!-- <div class="item item-text-wrap"> -->
+     <div id="riskchart" ></div> 
+<!--   </div> -->
 </div>
 
-<div class="card" ng-show = "dbtshow">
-  <div class="item item-text-wrap">
-    <div id="chartdiv2"></div>
-  </div>
-</div>
 
-<ion-slide-box on-slide-changed="slideHasChanged($index)"  ng-repeat ="item in newRisks | filter:{ num : whichone} "  delegate-handle="my-handle">
+<ion-slide-box on-slide-changed="slideHasChanged($index)"  delegate-handle="riskhandle">
+
   <ion-slide>
-    <div>
-  <div class="card" >
-  <div class="item item-divider">
-    <h2>高血压风险描述<h2>
-  </div>
-  <div class="item item-text-wrap">
+    <div class = "padding">
+      <div class="card" >
 
-    <h3>高血压等级说明</h3>
-    <p>{{ item.M1.Result }}</p>
-    
-    
-    <h3>风险详情</h3>  
-    <p>高血压发病率  {{ item.M1.f1 }} </p>
-    <p>高血压五年死亡率   {{ item.M1.f2 }}</p>
-    <p>心血管疾病   {{ item.M1.f3 }}</p>
-    <p>中风十年发生率   {{ item.M1.f4 }}</p>
-    <p>心衰率   {{ item.M1.f5 }}</p>
+        <div class="item item-divider">
+          <h2>高血压风险描述<h2>
+        </div>
+        <div class="item item-text-wrap">
 
-  </div>
-</div>
-</div>
+          <h3>高血压等级说明</h3>
+          <p>{{ item.M1.Result }}</p>
+          
+          
+          <h3>风险详情</h3>  
+          <p>高血压发病率  {{ item.M1.f1 }} </p>
+          <p>高血压五年死亡率   {{ item.M1.f2 }}</p>
+          <p>心血管疾病   {{ item.M1.f3 }}</p>
+          <p>中风十年发生率   {{ item.M1.f4 }}</p>
+          <p>心衰率   {{ item.M1.f5 }}</p>
+
+        </div>
+      </div>
+    </div>
   </ion-slide>
+
   <ion-slide >
-<div class="card" >
-  <div class="item item-divider">
-    <b>糖尿病风险描述</b>
-  </div>
-  <div class="item item-text-wrap">
-      <h3>糖尿病等级说明</h3>
-      {{item.M2.Result}}
-      {{item.M2.Period}}  {{item.M2.Glucose}} mmol/L
+    <div class = "padding">
+      <div class="card" >
+        <div class="item item-divider">
+          <h2>糖尿病风险描述</h2>
+        </div>
+        <div class="item item-text-wrap">
+            <h3>糖尿病等级说明</h3>
+            {{item.M2.Result}}
+            {{item.M2.Period}}  {{item.M2.Glucose}} mmol/L
+        </div>
+    </div>
   </div>
   </ion-slide>
+
+  <ion-slide>
+    <div class = "padding">
+      <div class="card" >
+      <div class="item item-divider">
+        <h2>心衰风险描述</h2>
+      </div>
+      <div class="item item-text-wrap">
+          <h3>心衰等级说明</h3>
+          {{item.M3.Result}}
+          <!-- {{item.M2.Period}}  {{item.M2.Glucose}} mmol/L -->
+      </div>
+    </div>
+  </div>
+  </ion-slide>
+
 
 </ion-slide-box>
 
 
 </ion-content>     
-
+</ion-view >
 <!--  <ion-footer-bar 
     class =" item-input-inset bar-light">
     <label class="item-input-wrapper">
