--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,20 +1,18 @@
 /* Empty. Add your own CSS if you like */
 .item h3 {
-  font-size: 0.8rem;
+  font-size: 1.23rem;
   font-weight: bold;
-  
+  color: #417D9A;
 }
 .item h2 {
-  font-size: 0.9rem;
-  font-weight: bold; 
-  color: #417D9A;  
+  font-size: 1.2rem;
+  font-weight: bold;   
 }
 .item h1 {
-  font-size: 1.2rem;
+  font-size: 0.8rem;
     color: #666666;
-    /*margin-top: 8px;*/
-    font-weight: bold;
-    /*font-style: italic*/
+    margin-top: 8px;
+    font-style: italic
 }
 
 .item-thumbnail-left img {
@@ -113,9 +111,9 @@
 .item-margin{
   padding:2px;
   margin:6px;
-  -moz-box-shadow:1px 2px 2px #999;
-  -webkit-box-shadow:1px 2px 2px #999;
-  box-shadow:1px 2px 2px #999;
+  /*-moz-box-shadow:1px 2px 2px #999;*/
+  /*-webkit-box-shadow:1px 2px 2px #999;*/
+  box-shadow:1px 1.5px 2px #999;
   /*box-shadow: 1px 1px 0px 1px #CCCCCC;*/
 }
 .bar-shadow{
@@ -124,9 +122,9 @@
   z-index:99;
   opacity:0.6;
   display: block;
-  -moz-box-shadow:0px 4px 5px #777;
-  -webkit-box-shadow:0px 4px 5px #777;
-  box-shadow:0px 4px 5px #777;
+  -moz-box-shadow:0px 4px 5px #999;
+  -webkit-box-shadow:0px 4px 5px #999;
+  box-shadow:0px 4px 5px #999;
   width: 100%;height:4px;
   background-color: transparent; 
 }
@@ -136,9 +134,9 @@
   z-index:99;
   opacity:0.6;
   display: block;
-  -moz-box-shadow:0px 3px 4px #777;
-  -webkit-box-shadow:0px 3px 4px #777;
-  box-shadow:0px 3px 4px #777;
+  -moz-box-shadow:0px 3px 4px #888;
+  -webkit-box-shadow:0px 3px 4px #888;
+  box-shadow:0px 3px 4px #888;
   width: 100%;height:3px;
   background-color: transparent; 
 }
@@ -163,32 +161,6 @@
   -webkit-progress-value:#FF0000;
   -moz-progress-bar:#FF0000;
  }*/
-#riskchart {#riskchart {
-  width   : 100%;
-  height    : 250px;
-  font-size : 15px;
-  display: inline;
-  background-color: #EEE8D6;
-} 
-  width: 100%;
-  height: 300px;
-  background-color: #F7F4EA;
- 
-}
-
-.m1 {
-  background-color: rgba(38,157,128,0.13);
-  border-top: 20px solid #BEEF9E;
-}
-.m2 {
-  background-color: rgba(38,157,128,0.07);
-  border-top: 20px solid #A6C36F;
-}
-.m3 {
-  background-color: rgba(38,157,128,0.04);
-  border-top: 20px solid #335145;
-}
-
 
  progress {margin: 0px !important}
 
