--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,6 @@
 /* Empty. Add your own CSS if you like */
 .item h3 {
-  font-size: 1.23rem;
+  font-size: 0.8rem;
   font-weight: bold;
   color: #417D9A;
 }
@@ -9,10 +9,11 @@
   font-weight: bold;   
 }
 .item h1 {
-  font-size: 0.8rem;
+  font-size: 1.23rem;
     color: #666666;
-    margin-top: 8px;
-    font-style: italic
+    font-weight: bold; 
+    /*margin-top: 8px;*/
+    /*font-style: italic*/
 }
 
 .item-thumbnail-left img {
@@ -86,7 +87,31 @@
   color: #417D9A;
 }
 
+.m1 {
+  background-color: rgba(38,157,128,0.13);
+  border-top: 20px solid #BEEF9E;
+}
+.m2 {
+  background-color: rgba(38,157,128,0.07);
+  border-top: 20px solid #A6C36F;
+}
+.m3 {
+  background-color: rgba(38,157,128,0.04);
+  border-top: 20px solid #335145;
+}
 
+#riskchart {#riskchart {
+  width   : 100%;
+  height    : 250px;
+  font-size : 15px;
+  display: inline;
+  background-color: #EEE8D6;
+} 
+  width: 100%;
+  height: 300px;
+  background-color: #F7F4EA;
+ 
+}
 #chartdiv2 {#chartdiv2 {
   width   : 100%;
   height    : 250px;
