--- a/www/partials/addpatient/risk.html
+++ b/www/partials/addpatient/risk.html
@@ -11,75 +11,59 @@
 
 <!--   <ion-header-bar class="bar-balanced">
     <h2 class="title">item List</h2>
-
     <button class ="button button-icon ion-minus-circled" ng-click ="data.showDelete = !data.showDelete; showReorder = false;"></button>
-
     <button class ="button button-icon ion-navicon" ng-click ="data.showReorder = !data.showReorder; showDelete = false;"></button>
   </ion-header-bar> -->
 <!--   <ion-nav-buttons side="primary">
-
   </ion-nav-buttons>
-
   <ion-nav-buttons side="secondary">
     
   </ion-nav-buttons> -->
 
-  <div class="bar bar-subheader 
+<!--   <div class="bar bar-subheader 
     item-input-inset bar-light">
     <label class="item-input-wrapper">
       <i class="icon ion-search placeholder-icon"></i>
       <input type="search" ng-model="query" placeholder="Search">
     </label>
-  </div>
-  <div class="sub-bar-shadow"></div> 
+  </div> -->
+  <!-- <div class="sub-bar-shadow"></div>  -->
 <ion-pane>
-  <ion-content class="has-subheader">
+  <ion-content >
     <ion-refresher on-refresh="doRefresh()">
     </ion-refresher>
     
-    <ion-list show-delete="data.showDelete" show-reorder="data.showReorder" >
+    <ion-list >
 
-      <ion-item ng-class="{'star': item.star}"  
-      collection-repeat ="item in newRisks | filter: query " 
-      class ="item-thumbnail-left
-      item-icon-right 
-      item-text-wrap"  href="#/addpatient/risk/{{item.num}}" ng-hide = " (!item.M1show)&& (!item.M2show) ">
-      <!-- 改动url -->
-      <img src="img/male.png"
-        alt="{{ item.num }} Photo">
-<!--      <h2>{{item.SortNo}}</h2> -->
-      <div class="row">
-        <div class="col" ng-show =" item.M1show ">
+      <ion-item collection-repeat ="item in newRisks | filter: query "  item-height="133" 
+       href="#/addpatient/risk/{{item.num}}" ng-hide = " (!item.M1show)&& (!item.M2show) && (!item.M3show)">
+       
+      <div class="row row-100">
+       <!-- <div class="badge badge-positive">第{{item.num}}次评估</div> -->
+        <div class="col m1" ng-show =" item.M1show " >
             <h2>{{item.M1.AssessmentName}}</h2>
             <h3>{{item.M1.AssessmentTime}}</h3>
             <h4>{{item.M1.SBP}} / {{item.M1.DBP}} mmHg </h4>
             <!-- <p> {{item.M1.Result | limitTo: 10  }}  {{ patient.bio.length > 10 ? '&hellip;' : '' }} </p> -->
         </div>
-        <div class="col" ng-show =" item.M2show">
+        <div class="col m2" ng-show =" item.M2show">
             <h2>{{item.M2.AssessmentName}}</h2>
             <h3>{{item.M2.AssessmentTime}}</h3>
             <h4>{{item.M2.Period}} : {{item.M2.Glucose}} mmol/L </h4>
             <!-- <p> {{item.M2.Result | limitTo: 10  }}  {{ patient.bio.length > 10 ? '&hellip;' : '' }} </p> -->
         </div>
-     </div>   
-      
+        <div class="col m3" ng-show ="item.M3show">
+            <h2>{{item.M3.AssessmentName}}</h2>
+            <h3>{{item.M3.AssessmentTime}}</h3>
+            <!-- <h4>{{item.M3.Period}} : {{item.M3.Glucose}} mmol/L </h4> -->
+            <!-- <p> {{item.M2.Result | limitTo: 10  }}  {{ patient.bio.length > 10 ? '&hellip;' : '' }} </p> -->
+        </div>
+
+
        
-<!--       <button class="button button-clear icon ion-star button-assertive"
-        ng-click="toggleStar(item)"
-        ng-show="item.star"></button> -->
-      
-<!--       <ion-option-button class="button-dark"
-        ng-click="toggleStar(item)">
-        <i class="icon ion-star"></i>
-      </ion-option-button>  -->     
-      
-   <!--    <ion-delete-button class="ion-minus-circled" ng-click="onItemDelete(item)">
-      </ion-delete-button>   -->    
-      
-<!--       <ion-reorder-button class="ion-navicon"
-        on-reorder="moveItem(item, $fromIndex, $toIndex)">
-      </ion-reorder-button> -->
-      
+
+     </div>   
+           
       </ion-item>
     </ion-list>
     <button ng-click="NextPage()" class="button button-block button-positive">下一步</button>
