--- a/www/partials/individual/coach-newpatients.html
+++ b/www/partials/individual/coach-newpatients.html
@@ -29,21 +29,25 @@
   <ion-content class="has-subheader content-item-list">       
     <ion-refresher on-refresh="doRefresh()"></ion-refresher>
     <ion-list>
-      <ion-item ng-repeat="patient in patients track by $index" class="item-thumbnail-left item-margin"  >
-        <img src="{{patient.photoAddress}}">
-        <div Style="padding-top:10px">
-            <div class="item-row ">
-              <div class="col-50"><h3><!--<i class="icon ion-chevron-right"></i>-->  {{patient.UserName}} </h3></div>
-              <div class="col-50"><h1>{{patient.Age}}岁      {{patient.GenderText}}</h1></div>
+      <ion-item ng-repeat="patient in patients track by $index" class="item-thumbnail-left item-margin" ng-click="viewDetail(patient)" >
+        <img src="{{patient.imageURL}}">
+        <!-- <div Style="padding-top:10px"> -->
+            <div class="item-row " style="padding-top:10px">
+              <div class="col-50"><h5><!--<i class="icon ion-chevron-right"></i>-->  {{patient.name}} </h5></div>
+              <div class="col-50"><h6>{{patient.Age}}      {{patient.GenderText}}</h6></div>
             </div>
             <div class="item-row">
-              <div class="col-100"><p><i class="icon ion-pie-graph"></i> {{patient.Module}}</p></div>
+              <div class="col-100"><p><i class="icon ion-pie-graph"></i> {{patient.module}}</p></div>
             </div>               
             <div class="item-row">
-              <div class="col-50"><p><i class="icon ion-calendar"></i> 已预约</p></div>
-              <div class="col-50"><p>2015-10-27</p></div>
+              <div class="col-100"><p><i class="icon ion-calendar"></i> {{patient.AppointmentText}} {{patient.ApplyTime}}</p></div>
+              <!-- <div class="col-50"><p></p></div> -->
             </div>
-        </div>
+            <!-- <div class="item-row"> -->
+              <!-- <div class="col-100"><p>“{{patient.Description}}”</p></div> -->
+              <!-- <div class="col-50"><p></p></div> -->
+            <!-- </div> -->
+        <!-- </div> -->
         <ion-option-button class="button-assertive"ng-click="onItemDelete($index)">
           <i class="icon ion-close-circled"></i>
         </ion-option-button>
