患者列表添加心衰

--- a/www/partials/individual/coach-newpatients.html
+++ b/www/partials/individual/coach-newpatients.html
@@ -37,7 +37,7 @@
               <div class="col-50"><h6>{{patient.Age}}      {{patient.GenderText}}</h6></div>
             </div>
             <div class="item-row">
-              <div class="col-100"><p><i class="icon ion-pie-graph"></i> {{patient.module}}</p></div>
+              <div class="col-100"><p><i class="icon ion-pie-graph"></i> {{patient.Module}}</p></div>
             </div>               
             <div class="item-row">
               <div class="col-100"><p><i class="icon ion-calendar"></i> {{patient.AppointmentText}} {{patient.ApplyTime}}</p></div>
