--- a/www/partials/individual/coach-patients-filter.html
+++ b/www/partials/individual/coach-patients-filter.html
@@ -14,7 +14,7 @@
    			<div class="col-25">
    				<div class="list">
             <a class="item" style="background-color:#F6F6F6;z-index:100;padding-top:12px;padding-bottom:0px" ng-repeat="prop in props track by $index" ng-click="switchTo($index)">
-              <div style="padding-bottom:12px">{{prop.Name}}<i ng-show="prop.checked" style="font-size:0.02em !important;color:#689f38" class="icon ion-android-checkbox-outline"></i> </div>
+              <div style="padding-bottom:12px">{{prop.Name}}<i ng-show="prop.checked" style="font-size:0.02em !important;color:#EF473A" class="icon ion-android-checkbox-outline"></i> </div>
             </a>            
    				</div>			
    			</div>
