--- a/www/partials/addpatient/plan/create.html
+++ b/www/partials/addpatient/plan/create.html
@@ -1,4 +1,4 @@
-<ion-view view-title="计划列表">
+<ion-view cache-view="false" view-title="计划列表">
 <ion-nav-bar class="bar-positive">
 <!-- 	<ion-nav-buttons side="primary">
 		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="$onClickBackward()">
