--- a/www/partials/managepatient/plan/healthEducation.html
+++ b/www/partials/managepatient/plan/healthEducation.html
@@ -1,4 +1,4 @@
-<ion-view view-title="健康教育">
+<ion-view cache-view="false" view-title="健康教育">
 	<ion-nav-bar class="bar-positive">
 		<ion-nav-buttons side="primary">
 			<button class="button button-icon ion-arrow-left-c" ng-click="Confirm()">
