--- a/www/partials/managepatient/plan/measure.html
+++ b/www/partials/managepatient/plan/measure.html
@@ -1,4 +1,4 @@
-<ion-view view-title="体征测量">
+<ion-view cache-view="false" view-title="体征测量">
 <ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
 		<button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()">
