--- a/www/partials/managepatient/plan/personal.html
+++ b/www/partials/managepatient/plan/personal.html
@@ -1,4 +1,4 @@
-<ion-view view-title="个性化定制">
+<ion-view cache-view="false" view-title="个性化定制">
 <ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
 		<button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()">
