--- a/www/partials/managepatient/plan/taskList.html
+++ b/www/partials/managepatient/plan/taskList.html
@@ -1,4 +1,4 @@
-<ion-view view-title="计划设定">
+<ion-view cache-view="false" view-title="计划设定">
 <ion-nav-bar class="bar-positive">
 	<ion-nav-buttons side="primary">
 		<a class="button button-icon ion-arrow-left-c" href="#/manage/create">
